k8s-rpi-apps-dex-auth/secured-ingress-external.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-auth-ingress-external
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/externalroutes"
spec:
  entryPoints:
    - websecure-external
  routes:
  - match: Host(`<dexloginhostname>`)
    kind: Rule
    services:
    - name: dex-auth-dex-k8s-authenticator
      port: 5555
  tls:
    certResolver: godaddy
